# proto-sdkman

./: Cargo.toml  LICENSE  README.md
.github/: release.yml
.github/scripts/release/: determine-version.ts
.github/workflows/: _reusable-cargo-build.yaml  _reusable-cargo-test.yaml  _reusable-clippy.yaml  _reusable-e2e.yaml  _reusable-pr-guard.yaml  _reusable-release.yaml  _reusable-rustfmt.yaml  auto-release.yaml  ci.yaml  on-release-merge.yaml  promote-release.yaml  pull_request.yaml  push.yaml  release.yaml
src/: lib.rs
tests/: integration_test.rs
