[package]
name = "proto-sdkman"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A proto WASM plugin for managing SDKMAN installations"
repository = "https://github.com/ageha734/proto-sdkman"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
proto_pdk = "0.32"

[dev-dependencies]
proto_pdk_test_utils = "0.45"
starbase_sandbox = "0.8"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
